--- a/templates/private.navbar.html
+++ b/templates/private.navbar.html
@@ -10,12 +10,15 @@
       </button>
       <a class="navbar-brand" href="/">
         <i class="fa fa-comments-o"></i>
-        ChitChat
+        Labyrinth
       </a>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
+      </ul>
+      <ul class="nav navbar-nav">
+        <li><a href="/leaderboard">Leaderboard</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/logout">Logout</a></li>
@@ -23,4 +26,4 @@
     </div>
   </div>
 </div>
-{{ end }}
+{{ end }}HomeHome
