--- a/templates/login.html
+++ b/templates/login.html
@@ -3,14 +3,14 @@
 <form class="form-signin center" role="form" action="/authenticate" method="post">
   <h2 class="form-signin-heading">
     <i class="fa fa-comments-o">
-      ChitChat
+      Labyrinth
     </i>
   </h2>
   <input type="email" name="email" class="form-control" placeholder="Email address" required autofocus>
   <input type="password" name="password" class="form-control" placeholder="Password" required>
-  <br/>
+  <br />
   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  <br/>
+  <br />
   <a class="lead pull-right" href="/signup">Sign up</a>
 </form>
 
