--- a/templates/public.thread.html
+++ b/templates/public.thread.html
@@ -2,21 +2,21 @@
 
 <div class="panel panel-default">
   <div class="panel-heading">
-    <span class="lead"> <i class="fa fa-comment-o"></i> {{ .Topic }}</span>
+    <span class="lead">{{ .Topic }}</span>
     <div class="pull-right">
       Started by {{ .User.Name }} - {{ .CreatedAtDate }}
     </div>
 
   </div>
-  
+
   {{ range .Posts }}
   <div class="panel-body">
     <span class="lead"> <i class="fa fa-comment"></i> {{ .Body }}</span>
     <div class="pull-right">
       {{ .User.Name }} - {{ .CreatedAtDate }}
-    </div>    
+    </div>
   </div>
-  {{ end }}    
+  {{ end }}
 
 </div>
 
