changed login method

--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
   <h2 class="form-signin-heading">
     Labyrinth
   </h2>
-  <input type="username" name="username" class="form-control" placeholder="Username" required autofocus>
+  <input type="username" name="email" class="form-control" placeholder="Email" required autofocus>
   <input type="password" name="password" class="form-control" placeholder="Password" required>
   <br />
   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
