--- a/templates/private.navbar.html
+++ b/templates/private.navbar.html
@@ -1,5 +1,5 @@
 {{ define "navbar" }}
-<div class="navbar navbar-default navbar-static-top" role="navigation">
+<div class="navbar navbar-default navbar-dark bg-dark navbar-static-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
@@ -18,6 +18,9 @@
       </ul>
       <ul class="nav navbar-nav">
         <li><a href="/leaderboard">Leaderboard</a></li>
+      </ul>
+      <ul class="nav navbar-nav">
+        <li><a href="/rules">Rules</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/logout">Logout</a></li>
