--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 {{ define "layout" }}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height:100%;">
 
 <head>
   <meta charset="utf-8">
@@ -12,15 +12,17 @@
   <link href="/static/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body style="height:100%">
   {{ template "navbar" . }}
 
-  <div class="container">
+  <div class="container h-75" style="height:50%">
 
     {{ template "content" . }}
 
   </div> <!-- /container -->
-
+  <div class="container">
+    {{ template "footer" . }}
+  </div>
   <script src="/static/js/jquery-2.1.1.min.js"></script>
   <script src="/static/js/bootstrap.min.js"></script>
 </body>
