--- a/templates/public.thread.html
+++ b/templates/public.thread.html
@@ -11,7 +11,7 @@
 
   {{ range .Posts }}
   <div class="panel-body">
-    <span class="lead"> <i class="fa fa-comment"></i> {{ .Body }}</span>
+    <span class="lead"> {{ .Body }}</span>
     <div class="pull-right">
       {{ .User.Name }} - {{ .CreatedAtDate }}
     </div>
