--- a/templates/private.navbar.html
+++ b/templates/private.navbar.html
@@ -1,7 +1,7 @@
 {{ define "navbar" }}
-<div class="navbar navbar-default navbar-dark bg-dark navbar-static-top" role="navigation">
+<div class="navbar navbar-default bg-dark navbar-static-top" role="navigation">
   <div class="container">
-    <div class="navbar-header">
+    <div class="navbar-header bg-dark">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
