--- a/templates/rules.html
+++ b/templates/rules.html
@@ -1,7 +1,7 @@
 {{ define "content" }}
 
-<h2>Rules</h2>
-<ul>
+<h1>Rules</h1>
+<ul style="font-size:1.3em">
     <li>One person can play on only one account. If found playing with multiple accounts, the person will be
         disqualified automatically</li>
     <li>Brute Forcing the solution using software is not an option. Your IP will be blocked if found doing so.</li>
