--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,9 +20,8 @@
     {{ template "content" . }}
 
   </div> <!-- /container -->
-  <div class="container">
-    {{ template "footer" . }}
-  </div>
+  <!-- <div class="container">
+  </div> -->
   <script src="/static/js/jquery-2.1.1.min.js"></script>
   <script src="/static/js/bootstrap.min.js"></script>
 </body>
