--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 {{ define "footer"}}
 
 <!-- Footer -->
-<footer class="page-footer font-small teal pt-4">
+<footer class="page-footer font-small teal pt-4" style="padding:15px">
 
     <!-- Footer Text -->
     <div class="container-fluid text-center text-md-left">
