--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 {{ define "layout" }}
 
 <!DOCTYPE html>
-<html lang="en" style="height:100%;">
+<html lang="en" >
 
 <head>
   <meta charset="utf-8">
@@ -10,18 +10,22 @@
   <title>Labyrinth</title>
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
   <link href="/static/css/font-awesome.min.css" rel="stylesheet">
+  <style>
+    img{
+      max-width: 512px;
+    }
+  </style>
 </head>
 
-<body style="height:100%">
+<body>
   {{ template "navbar" . }}
 
-  <div class="container h-75" style="height:50%">
+  <div class="container h-75">
 
     {{ template "content" . }}
 
-  </div> <!-- /container -->
-  <!-- <div class="container">
-  </div> -->
+  </div> 
+  {{ template "footer" .}}
   <script src="/static/js/jquery-2.1.1.min.js"></script>
   <script src="/static/js/bootstrap.min.js"></script>
 </body>
