--- a/templates/private.navbar.html
+++ b/templates/private.navbar.html
@@ -22,6 +22,9 @@
       <ul class="nav navbar-nav">
         <li><a href="/rules">Rules</a></li>
       </ul>
+      <ul class="nav navbar-nav">
+        <li><a href="https://apps.facebook.com/forumforpages/page/1690366391281332">Forum</a></li>
+      </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/logout">Logout</a></li>
       </ul>
