--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {{ define "content" }}
 <div>
-    <h2 class=" text-center">The Hunt will start on 1'st feb on 7:00pm</h2>
+    <h2 class=" text-center">The Hunt will start on 4 Feb 2019 on 9:00pm</h2>
 </div>
 
 {{ end }}
