--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,38 +1,36 @@
 {{ define "footer"}}
 
 <!-- Footer -->
-<footer class="page-footer font-small teal pt-4" style="padding:15px">
+<footer class="page-footer font-small stylish-color-dark pt-4">
 
-    <!-- Footer Text -->
-    <div class="container-fluid text-center text-md-left">
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left">
 
-        <!-- Grid row -->
-        <div class="row">
-            <hr class="clearfix w-100 d-md-none pb-3">
+      <!-- Grid row -->
+      <div class="row">
 
-            <!-- Grid column -->
-            <div class="">
+        <!-- Grid column -->
+        <div class="col-md-4 mx-auto">
 
-                <!-- Content -->
-                <h5 class="text-uppercase font-weight-bold">Labyrinth</h5>
-                <p style="font-size:1.5em">Labyrinth is an online cryptic hunt based on baffling cryptic trivia. Bask
-                    in to the thrill of the
-                    chase for the answers, to experience the Eureka moments along as you solve some of the greatest
-                    conundrums one can ever find.</p>
-
-            </div>
-            <!-- Grid column -->
-
-
-            <!-- Grid column -->
-
-            <!-- Grid column -->
+          <!-- Content -->
+          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Labyrinth</h5>
+          <p>Labyrinth is an onnline cryptic hunt based on baffling cryptic trivia.</p>
 
         </div>
-        <!-- Grid row -->
+        <!-- Grid column -->
+
+        <div class="col-md-4 mx-auto">
+
+            <!-- Content -->
+            <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Sponsored By</h5>
+            <img src="/static/images/logo.svg" class="img-responsive center-block" style="max-height: 30px">
+  
+          </div>
+      </div>
+      <!-- Grid row -->
 
     </div>
-    <!-- Footer Text -->
+    <!-- Footer Links -->
 
 
 </footer>
